[package]
name = "pong"
version = "0.1.0"
edition = "2024"

[lib]  # Makes it a lib crate
name = "pong"
path = "src/game.rs"

[[bin]]
name = "pong"
path = "src/main.rs"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
opt-level = 3

[dependencies]
avian2d = { git = "https://github.com/avianphysics/avian", branch = "main" }
bevy = "0.17.3"
